[package]
name = "sdk-rust"
version = "0.1.0"
authors = ["Maxim Fateev <mfateev@gmail.com>"]
edition = "2018"

#[[bin]] # Bin to run the HelloWorld gRPC server
#name = "temporal-client"
#path = "src/client.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.3"
prost = "0.6"
tokio = { version = "0.2", features = ["macros"] }
prost-types = "0.6.1"

[build-dependencies]
tonic-build = "0.3"
